--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+    path: /
+    controller: App\Controller\IndexController::index
+create:
+  path: /create
+  controller: App\Controller\IndexController::index
