--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "symfony/yaml": "5.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "ext-json": "*"
+        "ext-json": "*",
+        "symfony/web-profiler-bundle": "^5.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -54,7 +55,6 @@
         "symfony/phpunit-bridge": "^5.3",
         "symfony/stopwatch": "^5.3",
         "symfony/var-dumper": "^5.3",
-        "symfony/web-profiler-bundle": "^5.3"
     },
     "config": {
         "optimize-autoloader": true,
