--- a/composer.json
+++ b/composer.json
@@ -40,11 +40,11 @@
         "symfony/validator": "5.3.*",
         "symfony/web-link": "5.3.*",
         "symfony/webpack-encore-bundle": "^1.12",
+        "symfony/web-profiler-bundle": "^5.3",
         "symfony/yaml": "5.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "ext-json": "*",
-        "symfony/web-profiler-bundle": "^5.3"
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -55,6 +55,7 @@
         "symfony/phpunit-bridge": "^5.3",
         "symfony/stopwatch": "^5.3",
         "symfony/var-dumper": "^5.3",
+        "symfony/web-profiler-bundle": "^5.3"
     },
     "config": {
         "optimize-autoloader": true,
