--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "dev": "encore dev",
         "symfony": "symfony server:start",
         "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "build": "encore production --progress",
+        "postinstall": "encore production --progress"
     },
     "dependencies": {
         "axios": "^0.21.1",
